@@ -14,13 +14,18 @@
 package org.openmetadata.service.jdbi3;
 
 import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
+import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
+import static org.openmetadata.csv.CsvUtil.addEntityReferences;
+import static org.openmetadata.csv.CsvUtil.addField;
+import static org.openmetadata.csv.CsvUtil.addUserOwner;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.BUSINESS_UNIT;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.DEPARTMENT;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.DIVISION;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.GROUP;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.ORGANIZATION;
+import static org.openmetadata.schema.type.Include.ALL;
 import static org.openmetadata.service.Entity.ADMIN_USER_NAME;
-import static org.openmetadata.service.Entity.FIELD_OWNER;
+import static org.openmetadata.service.Entity.FIELD_DOMAIN;
 import static org.openmetadata.service.Entity.ORGANIZATION_NAME;
 import static org.openmetadata.service.Entity.POLICY;
 import static org.openmetadata.service.Entity.ROLE;
@@ -35,27 +40,36 @@ import static org.openmetadata.service.exception.CatalogExceptionMessage.invalid
 import static org.openmetadata.service.exception.CatalogExceptionMessage.invalidParent;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.invalidParentCount;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.csv.CSVPrinter;
+import org.apache.commons.csv.CSVRecord;
+import org.openmetadata.common.utils.CommonUtil;
+import org.openmetadata.csv.EntityCsv;
 import org.openmetadata.schema.api.teams.CreateTeam.TeamType;
 import org.openmetadata.schema.entity.teams.Team;
 import org.openmetadata.schema.entity.teams.TeamHierarchy;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.Include;
 import org.openmetadata.schema.type.Relationship;
+import org.openmetadata.schema.type.csv.CsvDocumentation;
+import org.openmetadata.schema.type.csv.CsvErrorType;
+import org.openmetadata.schema.type.csv.CsvHeader;
+import org.openmetadata.schema.type.csv.CsvImportResult;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.EntityNotFoundException;
 import org.openmetadata.service.jdbi3.CollectionDAO.EntityRelationshipRecord;
 import org.openmetadata.service.resources.teams.TeamResource;
-import org.openmetadata.service.security.policyevaluator.SubjectCache;
+import org.openmetadata.service.security.policyevaluator.SubjectContext;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.EntityUtil.Fields;
 import org.openmetadata.service.util.JsonUtils;
@@ -63,35 +77,48 @@ import org.openmetadata.service.util.ResultList;
 
 @Slf4j
 public class TeamRepository extends EntityRepository<Team> {
-  static final String TEAM_UPDATE_FIELDS = "owner,profile,users,defaultRoles,parents,children,policies,teamType";
-  static final String TEAM_PATCH_FIELDS = "owner,profile,users,defaultRoles,parents,children,policies,teamType";
+  static final String PARENTS_FIELD = "parents";
+  static final String TEAM_UPDATE_FIELDS = "profile,users,defaultRoles,parents,children,policies,teamType,email";
+  static final String TEAM_PATCH_FIELDS = "profile,users,defaultRoles,parents,children,policies,teamType,email";
   private static final String DEFAULT_ROLES = "defaultRoles";
   private Team organization = null;
 
-  public TeamRepository(CollectionDAO dao) {
-    super(TeamResource.COLLECTION_PATH, TEAM, Team.class, dao.teamDAO(), dao, TEAM_PATCH_FIELDS, TEAM_UPDATE_FIELDS);
+  public TeamRepository() {
+    super(
+        TeamResource.COLLECTION_PATH,
+        TEAM,
+        Team.class,
+        Entity.getCollectionDAO().teamDAO(),
+        TEAM_PATCH_FIELDS,
+        TEAM_UPDATE_FIELDS);
+    this.quoteFqn = true;
+    supportsSearch = true;
   }
 
   @Override
-  public Team setFields(Team team, Fields fields) throws IOException {
-    if (!fields.contains("profile")) {
-      team.setProfile(null); // Clear the profile attribute, if it was not requested
-    }
-    team.setUsers(fields.contains("users") ? getUsers(team) : null);
-    team.setOwns(fields.contains("owns") ? getOwns(team) : null);
-    team.setDefaultRoles(fields.contains(DEFAULT_ROLES) ? getDefaultRoles(team) : null);
-    team.setInheritedRoles(fields.contains(DEFAULT_ROLES) ? getInheritedRoles(team) : null);
-    team.setOwner(fields.contains(FIELD_OWNER) ? getOwner(team) : null);
-    team.setParents(fields.contains("parents") ? getParents(team) : null);
-    team.setChildren(fields.contains("children") ? getChildren(team.getId()) : null);
-    team.setPolicies(fields.contains("policies") ? getPolicies(team) : null);
-    team.setChildrenCount(fields.contains("childrenCount") ? getChildrenCount(team) : null);
-    team.setUserCount(fields.contains("userCount") ? getUserCount(team.getId()) : null);
+  public Team setFields(Team team, Fields fields) {
+    team.setUsers(fields.contains("users") ? getUsers(team) : team.getUsers());
+    team.setOwns(fields.contains("owns") ? getOwns(team) : team.getOwns());
+    team.setDefaultRoles(fields.contains(DEFAULT_ROLES) ? getDefaultRoles(team) : team.getDefaultRoles());
+    team.setInheritedRoles(fields.contains(DEFAULT_ROLES) ? getInheritedRoles(team) : team.getInheritedRoles());
+    team.setParents(fields.contains(PARENTS_FIELD) ? getParents(team) : team.getParents());
+    team.setPolicies(fields.contains("policies") ? getPolicies(team) : team.getPolicies());
+    team.setChildrenCount(fields.contains("childrenCount") ? getChildrenCount(team) : team.getChildrenCount());
+    team.setUserCount(fields.contains("userCount") ? getUserCount(team.getId()) : team.getUserCount());
     return team;
   }
 
-  private List<EntityReference> getInheritedRoles(Team team) throws IOException {
-    return SubjectCache.getInstance().getRolesForTeams(getParentsForInheritedRoles(team));
+  @Override
+  public Team clearFields(Team team, Fields fields) {
+    team.setProfile(fields.contains("profile") ? team.getProfile() : null);
+    team.setUsers(fields.contains("users") ? team.getUsers() : null);
+    team.setOwns(fields.contains("owns") ? team.getOwns() : null);
+    team.setDefaultRoles(fields.contains(DEFAULT_ROLES) ? team.getDefaultRoles() : null);
+    team.setInheritedRoles(fields.contains(DEFAULT_ROLES) ? team.getInheritedRoles() : null);
+    team.setParents(fields.contains(PARENTS_FIELD) ? team.getParents() : null);
+    team.setPolicies(fields.contains("policies") ? team.getPolicies() : null);
+    team.setChildrenCount(fields.contains("childrenCount") ? team.getChildrenCount() : null);
+    return team.withUserCount(fields.contains("userCount") ? team.getUserCount() : null);
   }
 
   @Override
@@ -102,7 +129,7 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  public void prepare(Team team) throws IOException {
+  public void prepare(Team team, boolean update) {
     populateParents(team); // Validate parents
     populateChildren(team); // Validate children
     validateUsers(team.getUsers());
@@ -111,33 +138,24 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
-  public void storeEntity(Team team, boolean update) throws IOException {
+  public void storeEntity(Team team, boolean update) {
     // Relationships and fields such as href are derived and not stored as part of json
-    EntityReference owner = team.getOwner();
     List<EntityReference> users = team.getUsers();
     List<EntityReference> defaultRoles = team.getDefaultRoles();
     List<EntityReference> parents = team.getParents();
-    List<EntityReference> children = team.getChildren();
     List<EntityReference> policies = team.getPolicies();
 
     // Don't store users, defaultRoles, href as JSON. Build it on the fly based on relationships
-    team.withUsers(null).withDefaultRoles(null).withHref(null).withOwner(null).withInheritedRoles(null);
+    team.withUsers(null).withDefaultRoles(null).withParents(null).withPolicies(null).withInheritedRoles(null);
 
     store(team, update);
 
     // Restore the relationships
-    team.withUsers(users)
-        .withDefaultRoles(defaultRoles)
-        .withOwner(owner)
-        .withParents(parents)
-        .withChildren(children)
-        .withPolicies(policies);
+    team.withUsers(users).withDefaultRoles(defaultRoles).withParents(parents).withPolicies(policies);
   }
 
   @Override
   public void storeRelationships(Team team) {
-    // Add team owner relationship
-    storeOwner(team, team.getOwner());
     for (EntityReference user : listOrEmpty(team.getUsers())) {
       addRelationship(team.getId(), user.getId(), TEAM, Entity.USER, Relationship.HAS);
     }
@@ -159,21 +177,34 @@ public class TeamRepository extends EntityRepository<Team> {
   }
 
   @Override
+  public Team setInheritedFields(Team team, Fields fields) {
+    // If user does not have domain, then inherit it from parent Team
+    // TODO have default team when a user belongs to multiple teams
+    if (fields.contains(FIELD_DOMAIN) && team.getDomain() == null) {
+      List<EntityReference> parents = !fields.contains(PARENTS_FIELD) ? getParents(team) : team.getParents();
+      if (!nullOrEmpty(parents)) {
+        Team parent = Entity.getEntity(TEAM, parents.get(0).getId(), "domain", ALL);
+        team.withDomain(parent.getDomain());
+      }
+    }
+    return team;
+  }
+
+  @Override
   public TeamUpdater getUpdater(Team original, Team updated, Operation operation) {
     return new TeamUpdater(original, updated, operation);
   }
 
   @Override
-  protected void preDelete(Team entity) {
+  protected void preDelete(Team entity, String deletedBy) {
     if (entity.getId().equals(organization.getId())) {
       throw new IllegalArgumentException(DELETE_ORGANIZATION);
     }
   }
 
   @Override
-  protected void cleanup(Team team) throws IOException {
-    // When a parent team is deleted, if the children team don't have a parent, set Organization as the parent
-    getParents(team);
+  protected void cleanup(Team team) {
+    // When a team is deleted, if the children team don't have another parent, set Organization as the parent
     for (EntityReference child : listOrEmpty(team.getChildren())) {
       Team childTeam = dao.findEntityById(child.getId());
       getParents(childTeam);
@@ -183,7 +214,23 @@ public class TeamRepository extends EntityRepository<Team> {
       }
     }
     super.cleanup(team);
-    SubjectCache.getInstance().invalidateTeam(team.getId());
+  }
+
+  @Override
+  public String exportToCsv(String parentTeam, String user) throws IOException {
+    Team team = getByName(null, parentTeam, Fields.EMPTY_FIELDS); // Validate team name
+    return new TeamCsv(team, user).exportCsv();
+  }
+
+  @Override
+  public CsvImportResult importFromCsv(String name, String csv, boolean dryRun, String user) throws IOException {
+    Team team = getByName(null, name, Fields.EMPTY_FIELDS); // Validate team name
+    TeamCsv teamCsv = new TeamCsv(team, user);
+    return teamCsv.importCsv(csv, dryRun);
+  }
+
+  private List<EntityReference> getInheritedRoles(Team team) {
+    return SubjectContext.getRolesForTeams(getParentsForInheritedRoles(team));
   }
 
   private TeamHierarchy getTeamHierarchy(Team team) {
@@ -195,7 +242,8 @@ public class TeamRepository extends EntityRepository<Team> {
         .withHref(team.getHref())
         .withFullyQualifiedName(team.getFullyQualifiedName())
         .withIsJoinable(team.getIsJoinable())
-        .withChildren(null);
+        .withChildren(null)
+        .withDescription(team.getDescription());
   }
 
   private TeamHierarchy deepCopy(TeamHierarchy team) {
@@ -240,8 +288,8 @@ public class TeamRepository extends EntityRepository<Team> {
     return team1;
   }
 
-  public List<TeamHierarchy> listHierarchy(ListFilter filter, int limit, Boolean isJoinable) throws IOException {
-    Fields fields = getFields("parents");
+  public List<TeamHierarchy> listHierarchy(ListFilter filter, int limit, Boolean isJoinable) {
+    Fields fields = getFields(PARENTS_FIELD);
     Map<UUID, TeamHierarchy> map = new HashMap<>();
     ResultList<Team> resultList = listAfter(null, fields, filter, limit, null);
     List<Team> allTeams = resultList.getData();
@@ -249,14 +297,14 @@ public class TeamRepository extends EntityRepository<Team> {
         allTeams.stream()
             .filter(Boolean.TRUE.equals(isJoinable) ? Team::getIsJoinable : t -> true)
             .filter(t -> !t.getName().equals(ORGANIZATION_NAME))
-            .collect(Collectors.toList());
+            .toList();
     // build hierarchy of joinable teams
     joinableTeams.forEach(
         team -> {
           Team currentTeam = team;
           TeamHierarchy currentHierarchy = getTeamHierarchy(team);
           while (currentTeam != null
-              && currentTeam.getParents().size() > 0
+              && !currentTeam.getParents().isEmpty()
               && !currentTeam.getParents().get(0).getName().equals(ORGANIZATION_NAME)) {
             EntityReference parentRef = currentTeam.getParents().get(0);
             Team parent =
@@ -287,46 +335,52 @@ public class TeamRepository extends EntityRepository<Team> {
     return new ArrayList<>(map.values());
   }
 
-  private List<EntityReference> getUsers(Team team) throws IOException {
-    List<EntityRelationshipRecord> userIds = findTo(team.getId(), TEAM, Relationship.HAS, Entity.USER);
-    return EntityUtil.populateEntityReferences(userIds, Entity.USER);
+  private List<EntityReference> getUsers(Team team) {
+    return findTo(team.getId(), TEAM, Relationship.HAS, Entity.USER);
   }
 
-  private Integer getUserCount(UUID teamId) throws IOException {
-    List<EntityRelationshipRecord> userIds = findTo(teamId, TEAM, Relationship.HAS, Entity.USER);
-    int userCount = userIds.size();
+  private List<EntityRelationshipRecord> getUsersRelationshipRecords(UUID teamId) {
+    List<EntityRelationshipRecord> userRecord = findToRecords(teamId, TEAM, Relationship.HAS, Entity.USER);
     List<EntityReference> children = getChildren(teamId);
     for (EntityReference child : children) {
-      userCount += getUserCount(child.getId());
+      userRecord.addAll(getUsersRelationshipRecords(child.getId()));
     }
-    return userCount;
+    return userRecord;
   }
 
-  private List<EntityReference> getOwns(Team team) throws IOException {
+  private Integer getUserCount(UUID teamId) {
+    List<String> userIds = new ArrayList<>();
+    List<EntityRelationshipRecord> userRecordList = getUsersRelationshipRecords(teamId);
+    for (EntityRelationshipRecord userRecord : userRecordList) {
+      userIds.add(userRecord.getId().toString());
+    }
+    Set<String> userIdsSet = new HashSet<>(userIds);
+    userIds.clear();
+    userIds.addAll(userIdsSet);
+    return userIds.size();
+  }
+
+  private List<EntityReference> getOwns(Team team) {
     // Compile entities owned by the team
-    return EntityUtil.getEntityReferences(
-        daoCollection.relationshipDAO().findTo(team.getId().toString(), TEAM, Relationship.OWNS.ordinal()));
+    return findTo(team.getId(), TEAM, Relationship.OWNS, null);
   }
 
-  private List<EntityReference> getDefaultRoles(Team team) throws IOException {
-    List<EntityRelationshipRecord> defaultRoleIds = findTo(team.getId(), TEAM, Relationship.HAS, Entity.ROLE);
-    return EntityUtil.populateEntityReferences(defaultRoleIds, Entity.ROLE);
+  private List<EntityReference> getDefaultRoles(Team team) {
+    return findTo(team.getId(), TEAM, Relationship.HAS, Entity.ROLE);
   }
 
-  private List<EntityReference> getParents(Team team) throws IOException {
-    List<EntityRelationshipRecord> relationshipRecords = findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM);
-    List<EntityReference> parents = EntityUtil.populateEntityReferences(relationshipRecords, TEAM);
+  private List<EntityReference> getParents(Team team) {
+    List<EntityReference> parents = findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM);
     if (organization != null && listOrEmpty(parents).isEmpty() && !team.getId().equals(organization.getId())) {
       return new ArrayList<>(List.of(organization.getEntityReference()));
     }
     return parents;
   }
 
-  private List<EntityReference> getParentsForInheritedRoles(Team team) throws IOException {
-    List<EntityRelationshipRecord> relationshipRecords = findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM);
+  private List<EntityReference> getParentsForInheritedRoles(Team team) {
     // filter out any deleted teams
     List<EntityReference> parents =
-        EntityUtil.populateEntityReferences(relationshipRecords, TEAM).stream()
+        findFrom(team.getId(), TEAM, Relationship.PARENT_OF, TEAM).stream()
             .filter(e -> !e.getDeleted())
             .collect(Collectors.toList());
     if (organization != null && listOrEmpty(parents).isEmpty() && !team.getId().equals(organization.getId())) {
@@ -335,25 +389,28 @@ public class TeamRepository extends EntityRepository<Team> {
     return parents;
   }
 
-  private List<EntityReference> getChildren(UUID teamId) throws IOException {
+  @Override
+  protected List<EntityReference> getChildren(Team team) {
+    return getChildren(team.getId());
+  }
+
+  protected List<EntityReference> getChildren(UUID teamId) {
     if (teamId.equals(organization.getId())) { // For organization all the parentless teams are children
-      List<String> children = daoCollection.teamDAO().listTeamsUnderOrganization(teamId.toString());
-      return EntityUtil.populateEntityReferencesById(EntityUtil.toIDs(children), Entity.TEAM);
+      List<String> children = daoCollection.teamDAO().listTeamsUnderOrganization(teamId);
+      return EntityUtil.populateEntityReferencesById(EntityUtil.strToIds(children), Entity.TEAM);
     }
-    List<EntityRelationshipRecord> children = findTo(teamId, TEAM, Relationship.PARENT_OF, TEAM);
-    return EntityUtil.populateEntityReferences(children, TEAM);
+    return findTo(teamId, TEAM, Relationship.PARENT_OF, TEAM);
   }
 
-  private Integer getChildrenCount(Team team) throws IOException {
-    return getChildren(team.getId()).size();
+  private Integer getChildrenCount(Team team) {
+    return !nullOrEmpty(team.getChildren()) ? team.getChildren().size() : getChildren(team).size();
   }
 
-  private List<EntityReference> getPolicies(Team team) throws IOException {
-    List<EntityRelationshipRecord> policies = findTo(team.getId(), TEAM, Relationship.HAS, POLICY);
-    return EntityUtil.populateEntityReferences(policies, POLICY);
+  private List<EntityReference> getPolicies(Team team) {
+    return findTo(team.getId(), TEAM, Relationship.HAS, POLICY);
   }
 
-  private void populateChildren(Team team) throws IOException {
+  private void populateChildren(Team team) {
     List<EntityReference> childrenRefs = team.getChildren();
     if (childrenRefs == null) {
       return;
@@ -379,7 +436,7 @@ public class TeamRepository extends EntityRepository<Team> {
     populateTeamRefs(childrenRefs, children);
   }
 
-  private void populateParents(Team team) throws IOException {
+  private void populateParents(Team team) {
     // Teams created without parents has the top Organization as the default parent
     List<EntityReference> parentRefs = listOrEmpty(team.getParents());
 
@@ -418,7 +475,7 @@ public class TeamRepository extends EntityRepository<Team> {
     }
   }
 
-  private List<Team> getTeams(List<EntityReference> teamRefs) throws IOException {
+  private List<Team> getTeams(List<EntityReference> teamRefs) {
     List<Team> teams = new ArrayList<>();
     for (EntityReference teamRef : teamRefs) {
       try {
@@ -434,7 +491,7 @@ public class TeamRepository extends EntityRepository<Team> {
     return teams;
   }
 
-  // Validate if the team can given type of parents
+  // Validate if the team can have given type of parents
   private void validateParents(Team team, List<Team> relatedTeams, TeamType... allowedTeamTypes) {
     List<TeamType> allowed = Arrays.asList(allowedTeamTypes);
     for (Team relatedTeam : relatedTeams) {
@@ -460,7 +517,7 @@ public class TeamRepository extends EntityRepository<Team> {
     }
   }
 
-  public void initOrganization() throws IOException {
+  public void initOrganization() {
     String json = dao.findJsonByFqn(ORGANIZATION_NAME, Include.ALL);
     if (json == null) {
       LOG.debug("Organization {} is not initialized", ORGANIZATION_NAME);
@@ -491,6 +548,116 @@ public class TeamRepository extends EntityRepository<Team> {
     }
   }
 
+  public static class TeamCsv extends EntityCsv<Team> {
+    public static final CsvDocumentation DOCUMENTATION = getCsvDocumentation(TEAM);
+    public static final List<CsvHeader> HEADERS = DOCUMENTATION.getHeaders();
+    private final Team team;
+
+    TeamCsv(Team team, String updatedBy) {
+      super(Entity.TEAM, HEADERS, updatedBy);
+      this.team = team;
+    }
+
+    @Override
+    protected Team toEntity(CSVPrinter printer, CSVRecord csvRecord) throws IOException {
+      // Field 1, 2, 3, 4, 7 - name, displayName, description, teamType, isJoinable
+      Team importedTeam =
+          new Team()
+              .withName(csvRecord.get(0))
+              .withDisplayName(csvRecord.get(1))
+              .withDescription(csvRecord.get(2))
+              .withTeamType(TeamType.fromValue(csvRecord.get(3)))
+              .withIsJoinable(getBoolean(printer, csvRecord, 6));
+
+      // Field 5 - parent teams
+      getParents(printer, csvRecord, importedTeam);
+      if (!processRecord) {
+        return null;
+      }
+
+      // Field 6 - Owner
+      importedTeam.setOwner(getOwnerAsUser(printer, csvRecord, 5));
+      if (!processRecord) {
+        return null;
+      }
+
+      // Field 8 - defaultRoles
+      importedTeam.setDefaultRoles(getEntityReferences(printer, csvRecord, 7, ROLE));
+      if (!processRecord) {
+        return null;
+      }
+
+      // Field 9 - policies
+      importedTeam.setPolicies(getEntityReferences(printer, csvRecord, 8, POLICY));
+      if (!processRecord) {
+        return null;
+      }
+      return importedTeam;
+    }
+
+    @Override
+    protected List<String> toRecord(Team entity) {
+      List<String> recordList = new ArrayList<>();
+      addField(recordList, entity.getName());
+      addField(recordList, entity.getDisplayName());
+      addField(recordList, entity.getDescription());
+      addField(recordList, entity.getTeamType().value());
+      addEntityReferences(recordList, entity.getParents());
+      addUserOwner(recordList, entity.getOwner());
+      addField(recordList, entity.getIsJoinable());
+      addEntityReferences(recordList, entity.getDefaultRoles());
+      addEntityReferences(recordList, entity.getPolicies());
+      return recordList;
+    }
+
+    private void getParents(CSVPrinter printer, CSVRecord csvRecord, Team importedTeam) throws IOException {
+      List<EntityReference> parentRefs = getUserOrTeamEntityReferences(printer, csvRecord, 4, Entity.TEAM);
+
+      // Validate team being created is under the hierarchy of the team for which CSV is being imported to
+      for (EntityReference parentRef : listOrEmpty(parentRefs)) {
+        if (parentRef.getName().equals(team.getName())) {
+          continue; // Parent is same as the team to which CSV is being imported, then it is in the same hierarchy
+        }
+        if (dryRunCreatedEntities.get(parentRef.getName()) != null) {
+          continue; // Parent is being created by CSV import
+        }
+        // Else the parent should already exist
+        if (!SubjectContext.isInTeam(team.getName(), parentRef)) {
+          importFailure(
+              printer, invalidTeam(4, team.getName(), importedTeam.getName(), parentRef.getName()), csvRecord);
+          processRecord = false;
+        }
+      }
+      importedTeam.setParents(parentRefs);
+    }
+
+    public static String invalidTeam(int field, String team, String importedTeam, String parentName) {
+      String error =
+          String.format("Parent %s of imported team %s is not under %s team hierarchy", parentName, importedTeam, team);
+      return String.format("#%s: Field %d error - %s", CsvErrorType.INVALID_FIELD, field + 1, error);
+    }
+
+    private List<Team> listTeams(TeamRepository repository, String parentTeam, List<Team> teams, Fields fields) {
+      // Export the entire hierarchy of teams
+      final ListFilter filter = new ListFilter(Include.NON_DELETED).addQueryParam("parentTeam", parentTeam);
+      List<Team> list = repository.listAll(fields, filter);
+      if (nullOrEmpty(list)) {
+        return teams;
+      }
+      teams.addAll(list);
+      for (Team teamEntry : list) {
+        listTeams(repository, teamEntry.getName(), teams, fields);
+      }
+      return teams;
+    }
+
+    public String exportCsv() throws IOException {
+      TeamRepository repository = (TeamRepository) Entity.getEntityRepository(TEAM);
+      final Fields fields = repository.getFields("owner,defaultRoles,parents,policies");
+      return exportCsv(listTeams(repository, team.getName(), new ArrayList<>(), fields));
+    }
+  }
+
   /** Handles entity updated from PUT and POST operation. */
   public class TeamUpdater extends EntityUpdater {
     public TeamUpdater(Team original, Team updated, Operation operation) {
@@ -498,20 +665,25 @@ public class TeamRepository extends EntityRepository<Team> {
     }
 
     @Override
-    public void entitySpecificUpdate() throws IOException {
+    public void entitySpecificUpdate() {
       if (original.getTeamType() != updated.getTeamType()) {
         // A team of type 'Group' cannot be updated
         if (GROUP.equals(original.getTeamType())) {
           throw new IllegalArgumentException(INVALID_GROUP_TEAM_UPDATE);
         }
         // A team containing children cannot be updated to Group
-        if (original.getChildren().size() > 0 && GROUP.equals(updated.getTeamType())) {
+        if (!original.getChildren().isEmpty() && GROUP.equals(updated.getTeamType())) {
           throw new IllegalArgumentException(INVALID_GROUP_TEAM_CHILDREN_UPDATE);
         }
       }
       recordChange("profile", original.getProfile(), updated.getProfile());
       recordChange("isJoinable", original.getIsJoinable(), updated.getIsJoinable());
       recordChange("teamType", original.getTeamType(), updated.getTeamType());
+      // If the team is empty then email should be null, not be empty
+      if (CommonUtil.nullOrEmpty(updated.getEmail())) {
+        updated.setEmail(null);
+      }
+      recordChange("email", original.getEmail(), updated.getEmail());
       updateUsers(original, updated);
       updateDefaultRoles(original, updated);
       updateParents(original, updated);
@@ -519,14 +691,14 @@ public class TeamRepository extends EntityRepository<Team> {
       updatePolicies(original, updated);
     }
 
-    private void updateUsers(Team origTeam, Team updatedTeam) throws JsonProcessingException {
+    private void updateUsers(Team origTeam, Team updatedTeam) {
       List<EntityReference> origUsers = listOrEmpty(origTeam.getUsers());
       List<EntityReference> updatedUsers = listOrEmpty(updatedTeam.getUsers());
       updateToRelationships(
           "users", TEAM, origTeam.getId(), Relationship.HAS, Entity.USER, origUsers, updatedUsers, false);
     }
 
-    private void updateDefaultRoles(Team origTeam, Team updatedTeam) throws JsonProcessingException {
+    private void updateDefaultRoles(Team origTeam, Team updatedTeam) {
       List<EntityReference> origDefaultRoles = listOrEmpty(origTeam.getDefaultRoles());
       List<EntityReference> updatedDefaultRoles = listOrEmpty(updatedTeam.getDefaultRoles());
       updateToRelationships(
@@ -540,21 +712,21 @@ public class TeamRepository extends EntityRepository<Team> {
           false);
     }
 
-    private void updateParents(Team original, Team updated) throws JsonProcessingException {
+    private void updateParents(Team original, Team updated) {
       List<EntityReference> origParents = listOrEmpty(original.getParents());
       List<EntityReference> updatedParents = listOrEmpty(updated.getParents());
       updateFromRelationships(
-          "parents", TEAM, origParents, updatedParents, Relationship.PARENT_OF, TEAM, original.getId());
+          PARENTS_FIELD, TEAM, origParents, updatedParents, Relationship.PARENT_OF, TEAM, original.getId());
     }
 
-    private void updateChildren(Team original, Team updated) throws JsonProcessingException {
+    private void updateChildren(Team original, Team updated) {
       List<EntityReference> origParents = listOrEmpty(original.getChildren());
       List<EntityReference> updatedParents = listOrEmpty(updated.getChildren());
       updateToRelationships(
           "children", TEAM, original.getId(), Relationship.PARENT_OF, TEAM, origParents, updatedParents, false);
     }
 
-    private void updatePolicies(Team original, Team updated) throws JsonProcessingException {
+    private void updatePolicies(Team original, Team updated) {
       List<EntityReference> origPolicies = listOrEmpty(original.getPolicies());
       List<EntityReference> updatedPolicies = listOrEmpty(updated.getPolicies());
       updateToRelationships(
