@@ -17,10 +17,8 @@
 package org.openmetadata.service.resources.glossary;
 
 import static javax.ws.rs.core.Response.Status.BAD_REQUEST;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static javax.ws.rs.core.Response.Status.FORBIDDEN;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.openmetadata.common.utils.CommonUtil.listOf;
 import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
 import static org.openmetadata.schema.type.ColumnDataType.BIGINT;
@@ -29,20 +27,19 @@ import static org.openmetadata.service.Entity.GLOSSARY;
 import static org.openmetadata.service.Entity.GLOSSARY_TERM;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.entityIsNotEmpty;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.glossaryTermMismatch;
+import static org.openmetadata.service.exception.CatalogExceptionMessage.notReviewer;
 import static org.openmetadata.service.resources.databases.TableResourceTest.getColumn;
+import static org.openmetadata.service.security.SecurityUtil.authHeaders;
 import static org.openmetadata.service.util.EntityUtil.fieldAdded;
 import static org.openmetadata.service.util.EntityUtil.fieldDeleted;
 import static org.openmetadata.service.util.EntityUtil.fieldUpdated;
+import static org.openmetadata.service.util.EntityUtil.getFqn;
+import static org.openmetadata.service.util.EntityUtil.getFqns;
 import static org.openmetadata.service.util.EntityUtil.getId;
 import static org.openmetadata.service.util.EntityUtil.toTagLabels;
-import static org.openmetadata.service.util.TestUtils.ADMIN_AUTH_HEADERS;
+import static org.openmetadata.service.util.TestUtils.*;
 import static org.openmetadata.service.util.TestUtils.UpdateType.MINOR_UPDATE;
 import static org.openmetadata.service.util.TestUtils.UpdateType.NO_CHANGE;
-import static org.openmetadata.service.util.TestUtils.assertListNotEmpty;
-import static org.openmetadata.service.util.TestUtils.assertListNotNull;
-import static org.openmetadata.service.util.TestUtils.assertListNull;
-import static org.openmetadata.service.util.TestUtils.assertResponse;
-import static org.openmetadata.service.util.TestUtils.validateEntityReference;
 
 import java.io.IOException;
 import java.net.URI;
@@ -63,27 +60,35 @@ import org.openmetadata.schema.api.data.CreateGlossary;
 import org.openmetadata.schema.api.data.CreateGlossaryTerm;
 import org.openmetadata.schema.api.data.CreateTable;
 import org.openmetadata.schema.api.data.TermReference;
+import org.openmetadata.schema.api.feed.ResolveTask;
 import org.openmetadata.schema.entity.data.Glossary;
 import org.openmetadata.schema.entity.data.GlossaryTerm;
 import org.openmetadata.schema.entity.data.GlossaryTerm.Status;
 import org.openmetadata.schema.entity.data.Table;
+import org.openmetadata.schema.entity.feed.Thread;
+import org.openmetadata.schema.entity.type.Style;
 import org.openmetadata.schema.type.ChangeDescription;
 import org.openmetadata.schema.type.Column;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.TagLabel;
+import org.openmetadata.schema.type.TaskDetails;
+import org.openmetadata.schema.type.TaskStatus;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.resources.EntityResourceTest;
 import org.openmetadata.service.resources.databases.TableResourceTest;
+import org.openmetadata.service.resources.feeds.FeedResource.ThreadList;
+import org.openmetadata.service.resources.feeds.FeedResourceTest;
+import org.openmetadata.service.resources.feeds.MessageParser.EntityLink;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.FullyQualifiedName;
 import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.util.ResultList;
 import org.openmetadata.service.util.TestUtils;
-import org.openmetadata.service.util.TestUtils.UpdateType;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, CreateGlossaryTerm> {
-  private final GlossaryResourceTest glossaryResourceTest = new GlossaryResourceTest();
+  private final GlossaryResourceTest glossaryTest = new GlossaryResourceTest();
+  private final FeedResourceTest taskTest = new FeedResourceTest();
 
   public GlossaryTermResourceTest() {
     super(
@@ -92,7 +97,6 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
         GlossaryTermResource.GlossaryTermList.class,
         "glossaryTerms",
         GlossaryTermResource.FIELDS);
-    supportsEmptyDescription = false;
   }
 
   @Order(0)
@@ -103,7 +107,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // - term1
     //   - term11
     //   - term12
-    Glossary glossary1 = createGlossary("glossary1", null, null);
+    Glossary glossary1 = createGlossary("glossãry1", null, null);
 
     GlossaryTerm term1 = createTerm(glossary1, null, "term1");
     GlossaryTerm term11 = createTerm(glossary1, term1, "term11");
@@ -115,7 +119,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // - term2
     //   - term21
     //   - term22
-    Glossary glossary2 = createGlossary("glossary2", null, null);
+    Glossary glossary2 = createGlossary("词汇表二", null, null);
 
     GlossaryTerm term2 = createTerm(glossary2, null, "term2");
     GlossaryTerm term21 = createTerm(glossary2, term2, "term21");
@@ -169,16 +173,36 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     //
     Glossary glossary = createGlossary(test, listOf(USER1_REF), USER2_REF);
 
-    // Create terms t1 and a term t12 under t1 in the glossary without reviewers and owner
+    // Create term t1 in the glossary without reviewers and owner
     CreateGlossaryTerm create =
-        new CreateGlossaryTerm().withGlossary(glossary.getEntityReference()).withDescription("description");
-    GlossaryTerm t1 = createEntity(create.withName("t1"), ADMIN_AUTH_HEADERS);
-    assertEquals(glossary.getReviewers(), t1.getReviewers()); // Reviewers are inherited
-    assertReference(glossary.getOwner(), t1.getOwner()); // Owner is inherited
+        new CreateGlossaryTerm().withName("t1").withGlossary(glossary.getFullyQualifiedName()).withDescription("desc");
+    GlossaryTerm t1 = assertOwnerInheritance(create, USER2_REF);
+    t1 = getEntity(t1.getId(), "reviewers,owner", ADMIN_AUTH_HEADERS);
+    assertEntityReferences(glossary.getReviewers(), t1.getReviewers()); // Reviewers are inherited
 
-    GlossaryTerm t12 = createEntity(create.withName("t12").withParent(t1.getEntityReference()), ADMIN_AUTH_HEADERS);
-    assertEquals(glossary.getReviewers(), t12.getReviewers()); // Reviewers are inherited
-    assertReference(glossary.getOwner(), t12.getOwner()); // Owner is inherited
+    // Create term t12 under t1 without reviewers and owner
+    create =
+        create.withName("t12").withGlossary(glossary.getFullyQualifiedName()).withParent(t1.getFullyQualifiedName());
+    GlossaryTerm t12 = assertOwnerInheritance(create, USER2_REF);
+    t12 = getEntity(t12.getId(), "reviewers,owner", ADMIN_AUTH_HEADERS);
+    assertEntityReferences(glossary.getReviewers(), t12.getReviewers()); // Reviewers are inherited
+  }
+
+  @Test
+  void test_inheritDomain(TestInfo test) throws IOException {
+    // When domain is not set for a glossary term, carry it forward from the glossary
+    CreateGlossary createGlossary = glossaryTest.createRequest(test).withDomain(DOMAIN.getFullyQualifiedName());
+    Glossary glossary = glossaryTest.createEntity(createGlossary, ADMIN_AUTH_HEADERS);
+
+    // Create term t1 in the glossary without domain
+    CreateGlossaryTerm create =
+        new CreateGlossaryTerm().withName("t1").withGlossary(glossary.getFullyQualifiedName()).withDescription("desc");
+    GlossaryTerm t1 = assertDomainInheritance(create, DOMAIN.getEntityReference());
+
+    // Create terms t12 under t1 without reviewers and owner
+    create =
+        create.withName("t12").withGlossary(glossary.getFullyQualifiedName()).withParent(t1.getFullyQualifiedName());
+    assertDomainInheritance(create, DOMAIN.getEntityReference());
   }
 
   @Test
@@ -195,7 +219,8 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
     // Apply each of the tag to a table
     TableResourceTest tableResourceTest = new TableResourceTest();
-    CreateTable createTable = tableResourceTest.createRequest(getEntityName(test)).withTags(toTagLabels(a, aa, aaa));
+    CreateTable createTable =
+        tableResourceTest.createRequest(tableResourceTest.getEntityName(test)).withTags(toTagLabels(a, aa, aaa));
     tableResourceTest.createEntity(createTable, ADMIN_AUTH_HEADERS);
 
     // Ensure prefix based tagLabel doesn't double count due too common prefix
@@ -239,14 +264,125 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     fieldDeleted(change, "reviewers", List.of(USER1_REF));
     fieldDeleted(change, "synonyms", List.of("synonym1"));
     fieldDeleted(change, "references", List.of(reference1));
-    term = patchEntityAndCheck(term, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
-
-    // Change GlossaryTerm status from DRAFT to Approved
-    origJson = JsonUtils.pojoToJson(term);
-    term.withStatus(Status.APPROVED);
-    change = getChangeDescription(term.getVersion());
-    fieldUpdated(change, "status", Status.DRAFT, Status.APPROVED);
     patchEntityAndCheck(term, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+  }
+
+  @Test
+  void test_GlossaryTermApprovalWorkflow(TestInfo test) throws IOException {
+    //
+    // glossary1 create without reviewers is created with Approved status
+    //
+    CreateGlossary createGlossary = glossaryTest.createRequest(getEntityName(test, 1)).withReviewers(null);
+    Glossary glossary1 = glossaryTest.createEntity(createGlossary, ADMIN_AUTH_HEADERS);
+
+    // term g1t1 under glossary1 is created in Approved mode without reviewers
+    GlossaryTerm g1t1 = createTerm(glossary1, null, "g1t1");
+    assertEquals(Status.APPROVED, g1t1.getStatus());
+
+    //
+    // glossary2 created with reviewers user1, user2
+    // Glossary term g2t1 created under it are in `Draft` status. Automatically a Request Approval task is created.
+    // Only a reviewer can change the status to `Approved`. When the status changes to `Approved`, the Request Approval
+    // task is automatically resolved.
+    //
+    createGlossary =
+        glossaryTest
+            .createRequest(getEntityName(test, 2))
+            .withReviewers(listOf(USER1.getFullyQualifiedName(), USER2.getFullyQualifiedName()));
+    Glossary glossary2 = glossaryTest.createEntity(createGlossary, ADMIN_AUTH_HEADERS);
+
+    // Creating a glossary term g2t1 should be in `Draft` mode (because glossary has reviewers)
+    GlossaryTerm g2t1 = createTerm(glossary2, null, "g2t1");
+    assertEquals(Status.DRAFT, g2t1.getStatus());
+    assertApprovalTask(g2t1, TaskStatus.Open); // A Request Approval task is opened
+
+    // Non reviewer - even Admin - can't change the `Draft` to `Approved` status using PATCH
+    String json = JsonUtils.pojoToJson(g2t1);
+    g2t1.setStatus(Status.APPROVED);
+    assertResponse(() -> patchEntity(g2t1.getId(), json, g2t1, ADMIN_AUTH_HEADERS), FORBIDDEN, notReviewer("admin"));
+
+    // A reviewer can change the `Draft` to `Approved` status using PATCH or PUT
+    GlossaryTerm g2t1Updated = patchEntity(g2t1.getId(), json, g2t1, authHeaders(USER1.getName()));
+    assertEquals(Status.APPROVED, g2t1Updated.getStatus());
+    assertApprovalTask(g2t1, TaskStatus.Closed); // The Request Approval task is closed
+
+    //
+    // Glossary terms g2t2 created is in `Draft` status. Automatically a Request Approval task is created.
+    // Only a reviewer can resolve the task. Resolving the task changes g2t1 status from `Draft` to `Approved`.
+    //
+    GlossaryTerm g2t2 = createTerm(glossary2, null, "g2t2");
+    assertEquals(Status.DRAFT, g2t2.getStatus());
+    Thread approvalTask = assertApprovalTask(g2t2, TaskStatus.Open); // A Request Approval task is opened
+    int taskId = approvalTask.getTask().getId();
+
+    // Even admin can't resolve the task
+    ResolveTask resolveTask = new ResolveTask().withNewValue(Status.APPROVED.value());
+    assertResponse(
+        () -> taskTest.resolveTask(taskId, resolveTask, ADMIN_AUTH_HEADERS), FORBIDDEN, notReviewer("admin"));
+
+    // Reviewer resolves the task. Glossary is approved. And task is resolved.
+    taskTest.resolveTask(taskId, resolveTask, authHeaders(USER1.getName()));
+    assertApprovalTask(g2t2, TaskStatus.Closed); // A Request Approval task is opened
+    g2t2 = getEntity(g2t2.getId(), authHeaders(USER1.getName()));
+    assertEquals(Status.APPROVED, g2t2.getStatus());
+
+    //
+    // Glossary terms g2t3 created is in `Draft` status. Automatically a Request Approval task is created.
+    // Only a reviewer can close the task. Closing the task moves g2t1 from `Draft` to `Rejected` state.
+    //
+    GlossaryTerm g2t3 = createTerm(glossary2, null, "g2t3");
+    assertEquals(Status.DRAFT, g2t3.getStatus());
+    approvalTask = assertApprovalTask(g2t3, TaskStatus.Open); // A Request Approval task is opened
+    int taskId2 = approvalTask.getTask().getId();
+
+    // Even admin can't close the task
+    assertResponse(() -> taskTest.closeTask(taskId2, "comment", ADMIN_AUTH_HEADERS), FORBIDDEN, notReviewer("admin"));
+
+    // Reviewer closes the task. Glossary term is rejected. And task is resolved.
+    taskTest.closeTask(taskId2, "Rejected", authHeaders(USER1.getName()));
+    assertApprovalTask(g2t3, TaskStatus.Closed); // A Request Approval task is opened
+    g2t3 = getEntity(g2t3.getId(), authHeaders(USER1.getName()));
+    assertEquals(Status.REJECTED, g2t3.getStatus());
+
+    //
+    // Glossary terms g2t4 created is in `Draft` status. Automatically a Request Approval task is created.
+    // Only a reviewer changes the status to `Rejected`. This automatically closes Request Approval task.
+    //
+    final GlossaryTerm g2t4 = createTerm(glossary2, null, "g2t4");
+    assertEquals(Status.DRAFT, g2t4.getStatus());
+    assertApprovalTask(g2t4, TaskStatus.Open); // A Request Approval task is opened
+
+    // Non reviewer - even Admin - can't change the `Draft` to `Approved` status using PATCH
+    String json2 = JsonUtils.pojoToJson(g2t4);
+    g2t4.setStatus(Status.REJECTED);
+    assertResponse(() -> patchEntity(g2t4.getId(), json2, g2t4, ADMIN_AUTH_HEADERS), FORBIDDEN, notReviewer("admin"));
+
+    // A reviewer can change the `Draft` to `Rejected` status using PATCH
+    GlossaryTerm g2t4Updated = patchEntity(g2t4.getId(), json2, g2t4, authHeaders(USER1.getName()));
+    assertEquals(Status.REJECTED, g2t4Updated.getStatus());
+    assertApprovalTask(g2t4, TaskStatus.Closed); // The Request Approval task is closed
+  }
+
+  @Test
+  void testInheritedPermissionFromParent(TestInfo test) throws IOException {
+    // Glossary g has owner dataConsumer
+    Glossary g = createGlossary(getEntityName(test), null, DATA_CONSUMER.getEntityReference());
+    // dataConsumer as owner of g can create glossary term t1 under it
+    GlossaryTerm t1 =
+        createTerm(g, null, "t1", null, DATA_STEWARD.getEntityReference(), authHeaders(DATA_CONSUMER.getName()));
+    // dataSteward who is owner of term t1 can create term t11 under it
+    createTerm(g, t1, "t11", null, DATA_STEWARD.getEntityReference(), authHeaders(DATA_STEWARD.getName()));
+  }
+
+  private Thread assertApprovalTask(GlossaryTerm term, TaskStatus expectedTaskStatus) throws HttpResponseException {
+    String entityLink = new EntityLink(Entity.GLOSSARY_TERM, term.getFullyQualifiedName()).getLinkString();
+    ThreadList threads = taskTest.listTasks(entityLink, null, null, expectedTaskStatus, 100, ADMIN_AUTH_HEADERS);
+    assertEquals(1, threads.getData().size());
+    Thread taskThread = threads.getData().get(0);
+    TaskDetails taskDetails = taskThread.getTask();
+    assertNotNull(taskDetails);
+    assertEquals(expectedTaskStatus, taskDetails.getStatus());
+    return taskThread;
   }
 
   @Test
@@ -254,10 +390,13 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // Create glossary term1 in glossary g1
     CreateGlossaryTerm create = createRequest(getEntityName(test), "", "", null).withReviewers(null).withSynonyms(null);
     GlossaryTerm term1 = createEntity(create, ADMIN_AUTH_HEADERS);
-    EntityReference termRef1 = term1.getEntityReference();
 
     // Create glossary term11 under term1 in glossary g1
-    create = createRequest("t1", "", "", null).withReviewers(null).withSynonyms(null).withParent(termRef1);
+    create =
+        createRequest("t1", "", "", null)
+            .withReviewers(null)
+            .withSynonyms(null)
+            .withParent(term1.getFullyQualifiedName());
     GlossaryTerm term11 = createEntity(create, ADMIN_AUTH_HEADERS);
 
     // Apply tags to term11
@@ -282,26 +421,70 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
   }
 
   @Test
+  void patch_addDeleteStyle(TestInfo test) throws IOException {
+    // Create glossary term1 in glossary g1
+    CreateGlossaryTerm create =
+        createRequest(getEntityName(test), "", "", null).withReviewers(null).withSynonyms(null).withStyle(null);
+    GlossaryTerm term1 = createEntity(create, ADMIN_AUTH_HEADERS);
+
+    // Create glossary term11 under term1 in glossary g1
+    create =
+        createRequest("t1", "", "", null)
+            .withSynonyms(null)
+            .withReviewers(null)
+            .withSynonyms(null)
+            .withParent(term1.getFullyQualifiedName());
+    GlossaryTerm term11 = createEntity(create, ADMIN_AUTH_HEADERS);
+
+    // Apply tags to term11
+    String json = JsonUtils.pojoToJson(term11);
+    ChangeDescription change = new ChangeDescription();
+    Style style = new Style().withIconURL("http://termIcon").withColor("#9FE2BF");
+    fieldAdded(change, "style", style);
+    term11.setStyle(style);
+    term11 = patchEntityAndCheck(term11, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+    assertStyle(style, term11.getStyle());
+
+    // Apply badge to term1
+    json = JsonUtils.pojoToJson(term1);
+    change = new ChangeDescription();
+    style = new Style().withIconURL("http://termIcon1").withColor("#9FE2DF");
+    fieldAdded(change, "style", style);
+    term1.setStyle(style);
+    term1 = patchEntityAndCheck(term1, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+    assertStyle(style, term1.getStyle());
+
+    // remove badge to term1
+    change = new ChangeDescription();
+    change.setPreviousVersion(term1.getVersion());
+    json = JsonUtils.pojoToJson(term1);
+    fieldDeleted(change, "style", style);
+    term1.setStyle(null);
+    patchEntityAndCheck(term1, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+    term1 = getEntity(term1.getId(), ADMIN_AUTH_HEADERS);
+    assertNull(term1.getStyle());
+  }
+
+  @Test
   void delete_recursive(TestInfo test) throws IOException {
     Glossary g1 = createGlossary(test, null, null);
-    EntityReference g1Ref = g1.getEntityReference();
 
     // Create glossary term t1 in glossary g1
-    CreateGlossaryTerm create = createRequest("t1", "", "", null).withGlossary(g1Ref);
-    GlossaryTerm t1 = createEntity(create, ADMIN_AUTH_HEADERS);
-    EntityReference tRef1 = t1.getEntityReference();
+    GlossaryTerm t1 = createTerm(g1, null, "t1");
     TagLabel t1Label = EntityUtil.toTagLabel(t1);
 
     // Create glossary term t11 under t1
-    create = createRequest("t11with'quote", "", "", null).withReviewers(null).withGlossary(g1Ref).withParent(tRef1);
-    GlossaryTerm t11 = createEntity(create, ADMIN_AUTH_HEADERS);
-    EntityReference tRef11 = t11.getEntityReference();
+    GlossaryTerm t11 = createTerm(g1, t1, "t11");
     TagLabel t11Label = EntityUtil.toTagLabel(t11);
 
     // Create glossary term t111 under t11
-    create = createRequest("t111", "", "", null).withReviewers(null).withGlossary(g1Ref).withParent(tRef11);
-    GlossaryTerm t111 = createEntity(create, ADMIN_AUTH_HEADERS);
+    GlossaryTerm t111 = createTerm(g1, t11, "t111");
     TagLabel t111Label = EntityUtil.toTagLabel(t111);
+
+    // Create glossary term t12, t121, t1211 under t1
+    GlossaryTerm t12 = createTerm(g1, t1, "t12");
+    GlossaryTerm t121 = createTerm(g1, t12, "t121");
+    createTerm(g1, t121, "t121");
 
     // Assign glossary terms to a table
     // t1 assigned to table. t11 assigned column1 and t111 assigned to column2
@@ -317,9 +500,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
     // g1 glossary is not empty and can't be deleted
     assertResponse(
-        () -> glossaryResourceTest.deleteEntity(g1.getId(), ADMIN_AUTH_HEADERS),
-        BAD_REQUEST,
-        entityIsNotEmpty(GLOSSARY));
+        () -> glossaryTest.deleteEntity(g1.getId(), ADMIN_AUTH_HEADERS), BAD_REQUEST, entityIsNotEmpty(GLOSSARY));
 
     // t1 is not empty and can't be deleted
     assertResponse(() -> deleteEntity(t1.getId(), ADMIN_AUTH_HEADERS), BAD_REQUEST, entityIsNotEmpty(GLOSSARY_TERM));
@@ -343,8 +524,8 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     assertFalse(table.getTags().isEmpty()); // tag t1 still exists
 
     // Delete the entire glossary
-    glossaryResourceTest.deleteAndCheckEntity(g1, true, true, ADMIN_AUTH_HEADERS);
-    glossaryResourceTest.assertEntityDeleted(g1.getId(), true);
+    glossaryTest.deleteAndCheckEntity(g1, true, true, ADMIN_AUTH_HEADERS);
+    glossaryTest.assertEntityDeleted(g1.getId(), true);
     assertEntityDeleted(t1.getId(), true);
 
     // Check to see the tags assigned are deleted
@@ -360,12 +541,25 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
   public GlossaryTerm createTerm(
       Glossary glossary, GlossaryTerm parent, String termName, List<EntityReference> reviewers) throws IOException {
-    EntityReference glossaryRef = glossary.getEntityReference();
-    // sending required fields only for entity reference
-    EntityReference parentRef = reduceEntityReference(parent);
+    return createTerm(glossary, parent, termName, reviewers, null, ADMIN_AUTH_HEADERS);
+  }
+
+  public GlossaryTerm createTerm(
+      Glossary glossary,
+      GlossaryTerm parent,
+      String termName,
+      List<EntityReference> reviewers,
+      EntityReference owner,
+      Map<String, String> createdBy)
+      throws IOException {
     CreateGlossaryTerm createGlossaryTerm =
-        createRequest(termName, "", "", null).withGlossary(glossaryRef).withParent(parentRef).withReviewers(reviewers);
-    return createAndCheckEntity(createGlossaryTerm, ADMIN_AUTH_HEADERS);
+        createRequest(termName, "", "", null)
+            .withGlossary(getFqn(glossary))
+            .withStyle(new Style().withColor("#FF5733").withIconURL("https://img"))
+            .withParent(getFqn(parent))
+            .withOwner(owner)
+            .withReviewers(getFqns(reviewers));
+    return createAndCheckEntity(createGlossaryTerm, createdBy);
   }
 
   public void assertContains(List<GlossaryTerm> expectedTerms, List<GlossaryTerm> actualTerms)
@@ -378,6 +572,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
       assertEquals(expected.getFullyQualifiedName(), actual.getFullyQualifiedName());
       assertEquals(expected.getSynonyms(), actual.getSynonyms());
       assertEquals(expected.getParent(), actual.getParent());
+      assertEquals(expected.getStyle(), actual.getStyle());
       TestUtils.assertEntityReferences(expected.getChildren(), actual.getChildren());
       TestUtils.assertEntityReferences(expected.getReviewers(), actual.getReviewers());
       TestUtils.validateTags(expected.getTags(), actual.getTags());
@@ -390,16 +585,17 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     return new CreateGlossaryTerm()
         .withName(name)
         .withSynonyms(List.of("syn1", "syn2", "syn3"))
-        .withGlossary(GLOSSARY1_REF)
-        .withRelatedTerms(Arrays.asList(GLOSSARY1_TERM1_REF, GLOSSARY2_TERM1_REF))
-        .withReviewers(List.of(USER1_REF));
+        .withGlossary(GLOSSARY1.getName())
+        .withRelatedTerms(Arrays.asList(getFqn(GLOSSARY1_TERM1), getFqn(GLOSSARY2_TERM1)))
+        .withReviewers(List.of(USER1_REF.getFullyQualifiedName()));
   }
 
   @Override
   public void validateCreatedEntity(GlossaryTerm entity, CreateGlossaryTerm request, Map<String, String> authHeaders)
       throws HttpResponseException {
+    // TODO fix this
     assertReference(request.getParent(), entity.getParent());
-    assertReference(request.getGlossary(), entity.getGlossary());
+    //    assertReference(request.getGlossary(), entity.getGlossary());
 
     // Validate fully qualified name
     String fqn =
@@ -407,18 +603,16 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
             ? FullyQualifiedName.build(entity.getGlossary().getName(), entity.getName())
             : FullyQualifiedName.add(entity.getParent().getFullyQualifiedName(), entity.getName());
     assertEquals(fqn, entity.getFullyQualifiedName());
-
+    assertEquals(entity.getStyle(), request.getStyle());
     // Validate glossary that holds this term is present
-    validateEntityReference(entity.getGlossary());
-    assertTrue(EntityUtil.entityReferenceMatch.test(request.getGlossary(), entity.getGlossary()));
+    assertReference(request.getGlossary(), entity.getGlossary());
 
     if (request.getParent() != null) {
-      validateEntityReference(entity.getParent());
-      assertTrue(EntityUtil.entityReferenceMatch.test(request.getParent(), entity.getParent()));
+      assertReference(request.getParent(), entity.getParent());
     }
 
-    TestUtils.assertEntityReferences(request.getRelatedTerms(), entity.getRelatedTerms());
-    TestUtils.assertEntityReferences(request.getReviewers(), entity.getReviewers());
+    assertEntityReferenceNames(request.getRelatedTerms(), entity.getRelatedTerms());
+    assertEntityReferenceNames(request.getReviewers(), entity.getReviewers());
 
     // Entity specific validation
     TestUtils.validateTags(request.getTags(), entity.getTags());
@@ -456,7 +650,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
   }
 
   @Override
-  public void assertFieldChange(String fieldName, Object expected, Object actual) throws IOException {
+  public void assertFieldChange(String fieldName, Object expected, Object actual) {
     if (expected == actual) {
       return;
     }
@@ -499,9 +693,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
   @Override
   public GlossaryTerm createAndCheckEntity(CreateGlossaryTerm create, Map<String, String> authHeaders)
       throws IOException {
-    int termCount = getGlossary(create.getGlossary().getName()).getTermCount();
+    int termCount = getGlossary(create.getGlossary()).getTermCount();
     GlossaryTerm term = super.createAndCheckEntity(create, authHeaders);
-    assertEquals(termCount + 1, getGlossary(create.getGlossary().getName()).getTermCount());
+    assertEquals(termCount + 1, getGlossary(create.getGlossary()).getTermCount());
     return term;
   }
 
@@ -513,10 +707,10 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
       UpdateType updateType,
       ChangeDescription changeDescription)
       throws IOException {
-    int termCount = getGlossary(request.getGlossary().getName()).getTermCount();
+    int termCount = getGlossary(request.getGlossary()).getTermCount();
     GlossaryTerm term = super.updateAndCheckEntity(request, status, authHeaders, updateType, changeDescription);
     if (status == Response.Status.CREATED) {
-      assertEquals(termCount + 1, getGlossary(request.getGlossary().getName()).getTermCount());
+      assertEquals(termCount + 1, getGlossary(request.getGlossary()).getTermCount());
     }
     return term;
   }
@@ -596,16 +790,16 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
   public Glossary createGlossary(TestInfo test, List<EntityReference> reviewers, EntityReference owner)
       throws IOException {
-    return createGlossary(glossaryResourceTest.getEntityName(test), reviewers, owner);
+    return createGlossary(glossaryTest.getEntityName(test), reviewers, owner);
   }
 
   public Glossary createGlossary(String name, List<EntityReference> reviewers, EntityReference owner)
       throws IOException {
-    CreateGlossary create = glossaryResourceTest.createRequest(name).withReviewers(reviewers).withOwner(owner);
-    return glossaryResourceTest.createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+    CreateGlossary create = glossaryTest.createRequest(name).withReviewers(getFqns(reviewers)).withOwner(owner);
+    return glossaryTest.createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
   }
 
   public Glossary getGlossary(String name) throws IOException {
-    return glossaryResourceTest.getEntityByName(name, glossaryResourceTest.getAllowedFields(), ADMIN_AUTH_HEADERS);
+    return glossaryTest.getEntityByName(name, glossaryTest.getAllowedFields(), ADMIN_AUTH_HEADERS);
   }
 }
