@@ -21,7 +21,13 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.openmetadata.common.utils.CommonUtil.listOf;
 import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
+import static org.openmetadata.csv.CsvUtil.recordToString;
+import static org.openmetadata.csv.EntityCsvTest.assertRows;
+import static org.openmetadata.csv.EntityCsvTest.assertSummary;
+import static org.openmetadata.csv.EntityCsvTest.createCsv;
+import static org.openmetadata.csv.EntityCsvTest.getFailedRecord;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.BUSINESS_UNIT;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.DEPARTMENT;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.DIVISION;
@@ -48,9 +54,9 @@ import static org.openmetadata.service.util.TestUtils.assertListNotNull;
 import static org.openmetadata.service.util.TestUtils.assertResponse;
 import static org.openmetadata.service.util.TestUtils.validateEntityReferences;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import java.io.IOException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -60,12 +66,15 @@ import java.util.Map;
 import java.util.Random;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import javax.ws.rs.client.WebTarget;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.http.client.HttpResponseException;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.openmetadata.common.utils.CommonUtil;
+import org.openmetadata.csv.EntityCsv;
+import org.openmetadata.csv.EntityCsvTest;
 import org.openmetadata.schema.api.policies.CreatePolicy;
 import org.openmetadata.schema.api.teams.CreateRole;
 import org.openmetadata.schema.api.teams.CreateTeam;
@@ -84,10 +93,13 @@ import org.openmetadata.schema.type.ImageList;
 import org.openmetadata.schema.type.Include;
 import org.openmetadata.schema.type.MetadataOperation;
 import org.openmetadata.schema.type.Profile;
+import org.openmetadata.schema.type.Webhook;
+import org.openmetadata.schema.type.csv.CsvImportResult;
+import org.openmetadata.schema.type.profile.SubscriptionConfig;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.CatalogExceptionMessage;
+import org.openmetadata.service.jdbi3.TeamRepository.TeamCsv;
 import org.openmetadata.service.resources.EntityResourceTest;
-import org.openmetadata.service.resources.locations.LocationResourceTest;
 import org.openmetadata.service.resources.policies.PolicyResourceTest;
 import org.openmetadata.service.resources.teams.TeamResource.TeamHierarchyList;
 import org.openmetadata.service.resources.teams.TeamResource.TeamList;
@@ -104,6 +116,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
 
   public TeamResourceTest() {
     super(TEAM, Team.class, TeamList.class, "teams", TeamResource.FIELDS);
+    supportsSearchIndex = true;
   }
 
   public void setupTeams(TestInfo test) throws HttpResponseException {
@@ -234,23 +247,22 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     Team div2 = createWithParents("div2", DIVISION, bu1.getEntityReference());
     Team dep3 = createWithParents("dep3", DEPARTMENT, div2.getEntityReference());
 
-    // Ensure parent has all the newly created children
+    // Ensure organization has all the newly created children
     ORG_TEAM = getEntity(ORG_TEAM.getId(), "children,parents", ADMIN_AUTH_HEADERS);
     assertEntityReferences(new ArrayList<>(List.of(bu1.getEntityReference())), ORG_TEAM.getChildren());
 
-    // Ensure parent has all the newly created children
+    // Ensure bu1 has all the newly created children
     bu1 = getEntity(bu1.getId(), "children", ADMIN_AUTH_HEADERS);
     assertEntityReferences(new ArrayList<>(List.of(div2.getEntityReference())), bu1.getChildren());
 
     div2 = getEntity(div2.getId(), "children", ADMIN_AUTH_HEADERS);
     assertEntityReferences(new ArrayList<>(List.of(dep3.getEntityReference())), div2.getChildren());
 
-    // Recursive delete parent Team bu1
+    // Recursively soft delete bu1 and children
     deleteAndCheckEntity(bu1, true, false, ADMIN_AUTH_HEADERS);
 
-    Double expectedVersion = EntityUtil.nextVersion(div2.getVersion());
-
     // Validate that the entity version is updated after soft delete
+    Double expectedVersion = EntityUtil.nextVersion(div2.getVersion());
     Map<String, String> queryParams = new HashMap<>();
     queryParams.put("include", Include.DELETED.value());
 
@@ -275,7 +287,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   }
 
   @Test
-  void patch_teamAttributes_as_non_admin_403(TestInfo test) throws HttpResponseException, JsonProcessingException {
+  void patch_teamAttributes_as_non_admin_403(TestInfo test) throws HttpResponseException {
     // Create team without any attributes
     Team team = createEntity(createRequest(test), ADMIN_AUTH_HEADERS);
     // Patching as a non-admin should be disallowed
@@ -484,7 +496,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     queryParams.put("parentTeam", ORGANIZATION_NAME);
     teams = listEntities(queryParams, ADMIN_AUTH_HEADERS);
     assertTrue(teams.getData().stream().anyMatch(t -> t.getName().equals("t1")));
-    t1 = teams.getData().stream().filter(t -> t.getName().equals("t1")).collect(Collectors.toList()).get(0);
+    t1 = teams.getData().stream().filter(t -> t.getName().equals("t1")).toList().get(0);
     assertEquals(3, t1.getChildrenCount());
     assertEquals(0, t1.getUserCount());
 
@@ -623,13 +635,16 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     Team team = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
 
     // Add policies to the team
-    create = createRequest(getEntityName(test)).withPolicies(List.of(POLICY1.getId(), POLICY2.getId()));
+    create =
+        createRequest(getEntityName(test))
+            .withPolicies(List.of(POLICY1.getId(), POLICY2.getId()))
+            .withName(team.getName());
     ChangeDescription change = getChangeDescription(team.getVersion());
     fieldAdded(change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
     team = updateAndCheckEntity(create, OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
     // Remove policies from the team
-    create = createRequest(getEntityName(test));
+    create = createRequest(getEntityName(test)).withName(team.getName());
     change = getChangeDescription(team.getVersion());
     fieldDeleted(change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
     updateAndCheckEntity(create, OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
@@ -656,6 +671,51 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   }
 
   @Test
+  void patch_teamEmail(TestInfo test) throws IOException {
+    CreateTeam create = createRequest(getEntityName(test));
+    Team team = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+
+    // Add policies to the team
+    String json = JsonUtils.pojoToJson(team);
+    String email = "team.!#$%&’*+/=?^_`{|}~-@openmetadata.org"; // Using all the allowed characters in email username
+    team.withEmail(email);
+    ChangeDescription change = getChangeDescription(team.getVersion());
+    fieldAdded(change, "email", email);
+    team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+
+    // Remove policies from the team
+    json = JsonUtils.pojoToJson(team);
+    team.withEmail(null);
+    change = getChangeDescription(team.getVersion());
+    fieldDeleted(change, "email", email);
+    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+  }
+
+  @Test
+  void patch_ProfileWithSubscription(TestInfo test) throws IOException, URISyntaxException {
+    CreateTeam create = createRequest(getEntityName(test));
+    Team team = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+    Profile profile1 =
+        new Profile()
+            .withSubscription(
+                new SubscriptionConfig().withSlack(new Webhook().withEndpoint(new URI("http://example.com"))));
+
+    // Add policies to the team
+    String json = JsonUtils.pojoToJson(team);
+    team.withProfile(profile1);
+    ChangeDescription change = getChangeDescription(team.getVersion());
+    fieldUpdated(change, "profile", PROFILE, profile1);
+    team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+
+    // Remove policies from the team
+    json = JsonUtils.pojoToJson(team);
+    team.withProfile(null);
+    change = getChangeDescription(team.getVersion());
+    fieldDeleted(change, "profile", profile1);
+    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+  }
+
+  @Test
   void testInheritedRole() throws HttpResponseException {
     // team11 inherits DATA_CONSUMER_ROLE from Organization
     Team team11 = getEntity(TEAM11.getId(), "defaultRoles", ADMIN_AUTH_HEADERS);
@@ -664,6 +724,102 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // TEAM21 inherits DATA_CONSUMER_ROLE from Organization and DATA_STEWARD_ROLE from Team2
     Team team21 = getEntity(TEAM21.getId(), "defaultRoles", ADMIN_AUTH_HEADERS);
     assertEntityReferences(List.of(DATA_CONSUMER_ROLE_REF, DATA_STEWARD_ROLE_REF), team21.getInheritedRoles());
+  }
+
+  @Test
+  void testCsvDocumentation() throws HttpResponseException {
+    assertEquals(TeamCsv.DOCUMENTATION, getCsvDocumentation());
+  }
+
+  @Test
+  void testImportInvalidCsv() throws IOException {
+    Team team = createEntity(createRequest("invalidCsvTest"), ADMIN_AUTH_HEADERS);
+
+    // Invalid policy
+    String resultsHeader = recordToString(EntityCsv.getResultHeaders(TeamCsv.HEADERS));
+    String record = getRecord(1, GROUP, team.getName(), "", false, "", "invalidPolicy");
+    String csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
+    CsvImportResult result = importCsv(team.getName(), csv, false);
+    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
+    String[] expectedRows = {resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(8, "invalidPolicy"))};
+    assertRows(result, expectedRows);
+
+    // Invalid roles
+    record = getRecord(1, GROUP, team.getName(), "", false, "invalidRole", "");
+    csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
+    result = importCsv(team.getName(), csv, false);
+    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
+    expectedRows = new String[] {resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(7, "invalidRole"))};
+    assertRows(result, expectedRows);
+
+    // Invalid owner
+    record = getRecord(1, GROUP, team.getName(), "invalidOwner", false, "", "");
+    csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
+    result = importCsv(team.getName(), csv, false);
+    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
+    expectedRows = new String[] {resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(5, "invalidOwner"))};
+    assertRows(result, expectedRows);
+
+    // Invalid parent team
+    record = getRecord(1, GROUP, "invalidParent", "", false, "", "");
+    csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
+    result = importCsv(team.getName(), csv, false);
+    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
+    expectedRows = new String[] {resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(4, "invalidParent"))};
+    assertRows(result, expectedRows);
+
+    // Parent team not in the hierarchy - TEAM21 is not under the team to which import is being done
+    record = getRecord(1, GROUP, TEAM21.getName(), "", false, "", "");
+    csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
+    result = importCsv(team.getName(), csv, false);
+    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
+    expectedRows =
+        new String[] {
+          resultsHeader, getFailedRecord(record, TeamCsv.invalidTeam(4, team.getName(), "x1", TEAM21.getName()))
+        };
+    assertRows(result, expectedRows);
+  }
+
+  @Test
+  void testTeamImportExport() throws IOException {
+    String teamName = "teamImportExport";
+    Team team = createEntity(createRequest(teamName).withTeamType(DEPARTMENT), ADMIN_AUTH_HEADERS);
+
+    // Create team hierarchy - team has children x1, x2. x1 has x11. x11 has x111
+    String record1 = getRecord(1, DEPARTMENT, teamName, USER1, true, listOf(DATA_CONSUMER_ROLE), listOf(POLICY1));
+    String record2 = getRecord(2, GROUP, teamName, USER2, false, listOf(DATA_STEWARD_ROLE), listOf(POLICY1, POLICY2));
+    String record11 =
+        getRecord(11, DEPARTMENT, "x1", USER2, false, listOf(DATA_STEWARD_ROLE), listOf(POLICY1, POLICY2));
+    String record111 = getRecord(111, GROUP, "x11", USER1, false, listOf(DATA_STEWARD_ROLE), listOf(POLICY1, POLICY2));
+    List<String> createRecords = listOf(record1, record2, record11, record111);
+
+    // Update teams x1, x2 description
+    record1 = record1.replace("description1", "new-description1");
+    record2 = record2.replace("description2", "new-description2");
+    List<String> updateRecords = listOf(record1, record2);
+
+    // Add new team x3 to existing rows
+    String record3 = getRecord(3, GROUP, team.getName(), null, true, null, (List<Policy>) null);
+    List<String> newRecords = listOf(record3);
+    testImportExport(team.getName(), TeamCsv.HEADERS, createRecords, updateRecords, newRecords);
+
+    // Import to team111 a user with parent team1 - since team1 is not under team111 hierarchy, import should fail
+    String record4 = getRecord(3, GROUP, "x1", null, true, null, (List<Policy>) null);
+    String csv = EntityCsvTest.createCsv(TeamCsv.HEADERS, listOf(record4), null);
+    CsvImportResult result = importCsv("x111", csv, false);
+    String error = TeamCsv.invalidTeam(4, "x111", "x3", "x1");
+    assertTrue(result.getImportResultsCsv().contains(error));
+  }
+
+  @Test
+  void test_inheritDomain(TestInfo test) throws IOException {
+    // When domain is not set for a user term, carry it forward from the parent team
+    CreateTeam createTeam = createRequest(test).withDomain(DOMAIN.getFullyQualifiedName()).withTeamType(DEPARTMENT);
+    Team team = createEntity(createTeam, ADMIN_AUTH_HEADERS);
+
+    // Create a children team without domain and ensure it inherits domain from the parent
+    createTeam = createRequest("team1").withParents(listOf(team.getId()));
+    assertDomainInheritance(createTeam, DOMAIN.getEntityReference());
   }
 
   private static void validateTeam(
@@ -719,16 +875,9 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   }
 
   @Override
-  public Team beforeDeletion(TestInfo test, Team team) throws HttpResponseException {
-    LocationResourceTest locationResourceTest = new LocationResourceTest();
-    locationResourceTest.createEntity(
-        locationResourceTest.createRequest(test).withOwner(team.getEntityReference()), ADMIN_AUTH_HEADERS);
-    return team;
-  }
-
-  @Override
   public void validateCreatedEntity(Team team, CreateTeam createRequest, Map<String, String> authHeaders) {
     assertEquals(createRequest.getProfile(), team.getProfile());
+    assertEquals(createRequest.getEmail(), team.getEmail());
     TestUtils.validateEntityReferences(team.getOwns());
 
     List<EntityReference> expectedUsers = new ArrayList<>();
@@ -760,6 +909,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   public void compareEntities(Team expected, Team updated, Map<String, String> authHeaders) {
     assertEquals(expected.getDisplayName(), updated.getDisplayName());
     assertEquals(expected.getProfile(), updated.getProfile());
+    assertEquals(expected.getEmail(), updated.getEmail());
     TestUtils.validateEntityReferences(updated.getOwns());
 
     List<EntityReference> expectedUsers = listOrEmpty(expected.getUsers());
@@ -772,7 +922,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   }
 
   @Override
-  public void assertFieldChange(String fieldName, Object expected, Object actual) throws IOException {
+  public void assertFieldChange(String fieldName, Object expected, Object actual) {
     if (expected == actual) {
       return;
     }
@@ -781,6 +931,10 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
       List<EntityReference> expectedRefs = (List<EntityReference>) expected;
       List<EntityReference> actualRefs = JsonUtils.readObjects(actual.toString(), EntityReference.class);
       assertEntityReferences(expectedRefs, actualRefs);
+    } else if (fieldName.equals("profile")) {
+      Profile expectedProfile = (Profile) expected;
+      Profile actualProfile = JsonUtils.convertValue(actual, Profile.class);
+      assertEquals(expectedProfile, actualProfile);
     } else {
       assertCommonFieldChange(fieldName, expected, actual);
     }
@@ -794,7 +948,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   private Team createWithParents(String teamName, TeamType teamType, Boolean isJoinable, EntityReference... parents)
       throws HttpResponseException {
     List<EntityReference> parentList = List.of(parents);
-    List<UUID> parentIds = EntityUtil.toIds(parentList);
+    List<UUID> parentIds = EntityUtil.refToIds(parentList);
     Team team =
         createEntity(
             createRequest(teamName).withParents(parentIds).withTeamType(teamType).withIsJoinable(isJoinable),
@@ -806,7 +960,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   private Team createWithChildren(String teamName, TeamType teamType, EntityReference... children)
       throws HttpResponseException {
     List<EntityReference> childrenList = List.of(children);
-    List<UUID> childIds = EntityUtil.toIds(childrenList);
+    List<UUID> childIds = EntityUtil.refToIds(childrenList);
     Team team = createEntity(createRequest(teamName).withChildren(childIds).withTeamType(teamType), ADMIN_AUTH_HEADERS);
     assertChildren(team, childrenList);
     return team;
@@ -852,10 +1006,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // Create TeamManager role with the policy to update team
     RoleResourceTest roleResourceTest = new RoleResourceTest();
     CreateRole createRole =
-        roleResourceTest
-            .createRequest(testInfo)
-            .withName("TeamManager")
-            .withPolicies(List.of(policy.getEntityReference()));
+        roleResourceTest.createRequest(testInfo).withName("TeamManager").withPolicies(List.of(policy.getName()));
     Role teamManager = roleResourceTest.createEntity(createRole, ADMIN_AUTH_HEADERS);
 
     // Create a user with TeamManager role.
@@ -880,5 +1031,50 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     target = target.queryParam("isJoinable", isJoinable);
     ResultList<TeamHierarchy> result = TestUtils.get(target, TeamHierarchyList.class, authHeaders);
     return result.getData();
+  }
+
+  private String getRecord(
+      int index,
+      TeamType teamType,
+      String parent,
+      User owner,
+      Boolean isJoinable,
+      List<Role> defaultRoles,
+      List<Policy> policies) {
+    return getRecord(
+        index,
+        teamType,
+        parent != null ? parent : "",
+        owner != null ? owner.getName() : "",
+        isJoinable,
+        defaultRoles != null
+            ? defaultRoles.stream().flatMap(r -> Stream.of(r.getName())).collect(Collectors.joining(";"))
+            : "",
+        policies != null
+            ? policies.stream().flatMap(p -> Stream.of(p.getName())).collect(Collectors.joining(";"))
+            : "");
+  }
+
+  private String getRecord(
+      int index,
+      TeamType teamType,
+      String parent,
+      String owner,
+      Boolean isJoinable,
+      String defaultRoles,
+      String policies) {
+    // CSV Header
+    // "name", "displayName", "description", "teamType", "parents", "owner", "isJoinable", "defaultRoles", & "policies"
+    return String.format(
+        "x%s,displayName%s,description%s,%s,%s,%s,%s,%s,%s",
+        index,
+        index,
+        index,
+        teamType.value(),
+        parent,
+        owner,
+        isJoinable == null ? "" : isJoinable,
+        defaultRoles,
+        policies);
   }
 }
